log/build_2020-10-16_16-22-01/sub_lidar/stderr.log
  File "/home/son/Documents/ros2_mbrb_ws/install/sub_lidar/lib/python3.6/site-packages/sub_lidar/sub_lidar.py", line 16
    pr  int("conn: {} \naddress: {}".format(conn, address))
          ^
SyntaxError: invalid syntax

